--- a/src/components/Header/FetchTodo/FetchTodo.module.scss
+++ b/src/components/Header/FetchTodo/FetchTodo.module.scss
@@ -1,14 +1,21 @@
-.button {
-  width: 120px;
-  border-radius: 8px;
-  height: 40px;
-  font-size: 16px;
-  background-color: blueviolet;
-  transition: background-color 0.5s ease;
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  column-gap: 12px;
 
-  &:hover,
-  &:focus,
-  &:active {
-    background-color: burlywood;
+  .button {
+    width: 140px;
+    border-radius: 8px;
+    height: 40px;
+    font-size: 16px;
+    background-color: blueviolet;
+    transition: background-color 0.5s ease;
+  
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: burlywood;
+    }
   }
 }
+
