--- a/src/components/MainLayout/MainLayout.module.scss
+++ b/src/components/MainLayout/MainLayout.module.scss
@@ -1,13 +1,10 @@
 .wrapper {
   width: 100%;
-  .title {
-    font-size: 32px;
-    font-weight: bold;
-    line-height: 40px;
-    text-align: center;
+
+  .main {
     padding: 28px 0;
   }
-
+  
   .nav {
     background-color: green;
     position: fixed;
